# core

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  QUORBIT_ECOSYSTEM_SYNTHESIS.md  QUORBIT_MODELS_AND_NETWORK.md  README.md  SECURITY.md  SESSION_6_HANDOFF.md  docker-compose.yml  e2e_demo.py  pyproject.toml  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/anti_gaming/: __init__.py  adaptive_weights.py  detectors.py  graph_store.py
backend/app/audit/: __init__.py  admin.py  merkle_log.py
backend/app/bridges/: __init__.py  a2a_bridge.py  mcp_bridge.py
backend/app/bus/: __init__.py  genesis.py  health_check.py  heartbeat.py  human_gate.py  identity.py  key_rotation.py  nonce.py  probationary.py  quarantine.py  registry.py  state_machine.py  task_schema.py
backend/app/busai/: __init__.py  cooldown.py
backend/app/capability/: __init__.py  card.py
backend/app/consensus/: __init__.py  election.py  phi_accrual.py  view_change.py
backend/app/discovery/: __init__.py  messages.py  parallel.py  relaxation.py
backend/app/reputation/: __init__.py  embedding_config.py  pgvector_store.py  scoring.py
config/: genesis_validators_example.json
docs/: CNAME  arch-v3_1_1.md  index.html
docs/architecture/: overview.md
docs/migrations/: 001_pgvector.sql
docs/sprints/: sprint_0.md
sdk/python/: README.md  pyproject.toml
sdk/python/quorbit/: __init__.py  client.py
tests/: test_sprint10_api.py
tests/unit/: test_bridges.py  test_capability.py  test_consensus.py  test_discovery.py  test_identity.py  test_merkle_log.py  test_quarantine.py  test_reputation.py  test_sdk.py  test_sprint7.py  test_state_machine.py
